--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,5 @@
 @import './utils/utils';
+@import './utils/breakpoint';
 @import './components/common/header';
 @import './components/main.index/hero';
 @import './components/main.index/special';
