--- a/css/main.css
+++ b/css/main.css
@@ -72,11 +72,25 @@ img {
 }
 
 .container {
-  width: 1200px;
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
+}
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
 }
 
 .page-header {
@@ -114,6 +128,24 @@ img {
 
 .logo__second {
   color: #000000;
+}
+
+.menu-btn {
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+}
+.menu-btn--open .icon-menu {
+  display: none;
+}
+.menu-btn--open .icon-close {
+  display: block;
+}
+
+.menu-btn__icon-close {
+  display: none;
 }
 
 .main-nav__list {
