--- a/sass/utils/_utils.scss
+++ b/sass/utils/_utils.scss
@@ -1,3 +1,7 @@
+
+
+
+
 :root {
     --primary-text-color: #757575;
     --secondary-text-color: #212121;
@@ -73,9 +77,21 @@ img {
 }
 
 .container {
-    width: 1200px;
+
     margin-left: auto;
     margin-right: auto;
     padding-left: 15px;
     padding-right: 15px;
+
+    @media screen and (min-width: 480px) {
+        width: 480px;
+    }
+    
+    @media screen and (min-width: 768px) {
+        width: 768px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        width: 1200px;
+    }
 }
