--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,7 @@
 @import './utils/utils';
 @import './utils/breakpoint';
 @import './components/common/header';
+@import './components/common/logo';
 @import './components/main.index/hero';
 @import './components/main.index/special';
 @import './components/main.index/work';
