--- a/sass/components/common/_header.scss
+++ b/sass/components/common/_header.scss
@@ -13,29 +13,9 @@
 
 }
 
-
 .main-nav {
     display: flex;
     align-items: center;
-}
-
-.logo {
-    color: var(--secondary-text-color);
-    font-family: Raleway, sans-serif;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.1;
-    letter-spacing: 0.03em;
-    text-decoration: none;
-    margin-right: 93px;
-}
-
-.logo__first {
-    color: var(--accent-color);
-}
-
-.logo__second {
-    color: #000000;
 }
 
 .menu-btn{
@@ -119,8 +99,11 @@
 }
 .contact-list {
     display: flex;
+    flex-direction: column;
+    align-items: center;
     list-style: none;
     margin-left: auto;
+
 }
 
 .contact-list__item:not(:last-child) {
