--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,14 +1,14 @@
 @import './utils/utils';
 @import './utils/breakpoint';
-@import './components/common/header';
-@import './components/common/logo';
-@import './components/main.index/hero';
-@import './components/main.index/special';
-@import './components/main.index/work';
-@import './components/main.index/team';
-@import './components/main.index/client-list';
-@import './components/main.portfolio/filter';
-@import './components/main.portfolio/content';
-@import './components/common/footer';
-@import './components/main.index/backdrop';
+@import './components/header';
+@import './components/logo';
+@import './components/hero';
+@import './components/special';
+@import './components/work';
+@import './components/team';
+@import './components/client-list';
+@import './components/filter';
+@import './components/content';
+@import './components/footer';
+@import './components/backdrop';
 
