--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,8 +1,7 @@
 @import './utils/utils';
-@import './utils/breakpoint';
 @import './components/header';
 @import './components/logo';
-@import './components/hero';
+@import './hero';
 @import './components/special';
 @import './components/work';
 @import './components/team';
