--- a/sass/components/_client-list.scss
+++ b/sass/components/_client-list.scss
@@ -2,11 +2,42 @@
     display: flex;
     list-style: none;
     justify-content: center;
+    flex-wrap: wrap;
 }
-
-.client__item:not(:last-child) {
+.client__item{
+    width: calc((100% - 60px)/2);
     margin-right: 30px;
+    
+    &:nth-child(2n) {
+        margin-right: 0;
+    }
+    
+    &:not(:nth-last-child(-n+2)) {
+        margin-bottom: 30px;
+    }
+    @media screen and (min-width: 768px) {
+        width: calc((100% - 90px)/3);
+
+        &:nth-child(3n) {
+            margin-right: 0;
+        }
+        
+        &:not(:nth-last-child(-n+3)) {
+            margin-bottom: 30px;
+        }
+    }
+    @media screen and (min-width: 1200px) {
+        margin: 0;
+
+        &:not(:last-child){
+            margin-right: 30px;
+        }
+    }
+
 }
+// .client__item:last-child {
+//     margin-right: 0;
+// }
 
 .client__link {
     display: inline-block;
