--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,29 +1,44 @@
 
 .page-header {
-    min-height: 80px;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     background-color: #FFFFFF;
     border-bottom: 1px solid rgba(236, 236, 236, 1);
-    padding-top: 24px;
-    padding-bottom: 24px;
     z-index: 9;
 
 }
 
+.page-header__container{
+    position: relative;
+    max-width: 768px;
+    
+    @media screen and (min-width: 768px) {
+        display: flex;
+    }
+    @media screen and (min-width: 1200px) {
+        max-width: 1200px;
+    }
+}
+
 .main-nav {
+    width: 100%;
+    height: 60px;
     display: flex;
     align-items: center;
+    @media screen and (min-width:768px) {
+            height: 80px;
+        }
 }
 
 .menu-btn{
-    display: inline-block;
-    margin: 0;
+    align-items: center;
+    display: flex;
     padding: 0;
     border: none;
     background-color: transparent;
+    cursor: pointer;
 
     &--open .icon-menu {
         display: none;
@@ -32,8 +47,14 @@
     &--open .icon-close {
         display: block;
     }
-}
 
+    @media screen and(min-width:768px) {
+        display: none;
+    }
+}
+.drop-menu{
+    display: flex;
+}
 .menu-btn__icon-close{
     display: none;
 }
@@ -41,6 +62,7 @@
 .main-nav__list {
     list-style: none;
     display: flex;
+    margin-right: auto;
 }
 
 
