--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,12 +1,21 @@
 .logo {
+    display: inline-block;
     color: var(--secondary-text-color);
     font-family: Raleway, sans-serif;
     font-weight: 700;
     font-size: 26px;
-    line-height: 1.1;
+    line-height: 1.19;
     letter-spacing: 0.03em;
     text-decoration: none;
-    margin-right: 93px;
+    margin-right: auto;
+    
+    @media screen and (min-width:768px) {
+        margin-right: 87px;
+    }
+
+    @media screen and (min-width:1200px) {
+        margin-right: 93px;
+    }
 }
 
 .logo__first {
