--- a/sass/components/_special.scss
+++ b/sass/components/_special.scss
@@ -4,12 +4,19 @@
 
 .special__list {
     list-style: none;
-    display: flex;
+    
+    @media screen and (min-width:768px){
+        display: flex;
+    }
 }
 
 .special__item {
-    flex-basis: calc((100% - 90px) / 4);
-    margin-right: 30px;
+    margin-bottom: 30px;
+    
+    @media screen and (min-width:768px){
+        flex-basis: calc((100% - 90px) / 4);
+        margin-right: 30px;
+    }
 
     &::before {
         content: "";
