--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -7,17 +7,31 @@
 .team__list {
     list-style: none;
     display: flex;
+    flex-direction: column; 
 }
-
 .team__item {
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
     background-color: #fff;
-    flex-basis: calc((100% - 90px) / 4);
-    margin-right: 30px;
 
     &:last-child {
         margin-right: 0;
+    }
+    &:not(:last-child){
+        margin-bottom: 30px;
+    }
+    
+    
+    @media screen and (min-width: 768px) {
+        margin-bottom: 0;
+        width: calc((100% - 60px) / 2);
+        margin-right: 30px;
+    }
+    
+    @media screen and (min-width: 1200px) {
+        margin-bottom: 0;
+        flex-basis: calc((100% - 90px) / 4);
+        margin-right: 30px;
     }
 }
 
