--- a/sass/components/_work.scss
+++ b/sass/components/_work.scss
@@ -1,6 +1,11 @@
 .work {
-    background-color: #fff;
-    padding-top: 0;
+    display: none;
+    
+    @media screen and (min-width: 1200px) {
+        display: block;
+        padding-top: 0;
+        background-color: #fff;
+    }
 
 }
 
