--- a/sass/utils/_utils.scss
+++ b/sass/utils/_utils.scss
@@ -1,7 +1,4 @@
 
-
-
-
 :root {
     --primary-text-color: #757575;
     --secondary-text-color: #212121;
@@ -14,10 +11,15 @@
 // $time-animation: cubic-bezier(0.4, 0, 0.2, 1);
 /* Основа сторінки */
 body {
+    padding-top: 60px;
     background-color: #Ffffff;
     color: var(--primary-text-color);
     font-family: Roboto, sans-serif;
     z-index: 8;
+
+    @media screen and (min-width:768px) {
+        padding-top: 80px; ;
+    }
 }
 
 ul {
@@ -62,8 +64,11 @@ img {
 }
 
 .section {
-    padding-bottom: 94px;
-    padding-top: 94px;
+    padding: 60px 0;
+    
+    @media screen and (min-width: 1200px) {
+        padding: 94px 0;
+    }
 }
 
 .title {
@@ -77,21 +82,35 @@ img {
 }
 
 .container {
-
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 15px;
-    padding-right: 15px;
-
-    @media screen and (min-width: 480px) {
-        width: 480px;
-    }
+    margin: 0 auto;
+    padding: 0 15px;
+    max-width: 480px;
     
     @media screen and (min-width: 768px) {
         width: 768px;
+        margin: 0 auto;
     }
 
     @media screen and (min-width: 1200px) {
         width: 1200px;
+        margin: 0 auto;
     }
+}
+@mixin bg-2x {
+
+    @media screen and (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+        @content;
+    }
+}
+
+@mixin bg-3x {
+
+    @media screen and (min-device-pixel-ratio: 3),
+    (min-resolution: 288dpi),
+    (min-resolution: 3dppx) {
+        @content;
+    }
+
 }
