--- a/css/main.css
+++ b/css/main.css
@@ -524,11 +524,13 @@ img {
   border-radius: 0px 0px 4px 4px;
   background-color: #fff;
 }
-.team__item:last-child {
-  margin-right: 0;
-}
-.team__item:not(:last-child) {
-  margin-bottom: 30px;
+@media screen and (max-width: 768px) {
+  .team__item:last-child {
+    margin-right: 0;
+  }
+  .team__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
 @media screen and (min-width: 768px) {
   .team__item {
@@ -608,14 +610,18 @@ img {
 }
 
 .client__item {
-  width: calc((100% - 60px) / 2);
   margin-right: 30px;
 }
-.client__item:nth-child(2n) {
-  margin-right: 0;
-}
-.client__item:not(:nth-last-child(-n+2)) {
-  margin-bottom: 30px;
+@media screen and (max-width: 768px px) {
+  .client__item {
+    width: calc((100% - 60px) / 2);
+  }
+  .client__item:nth-child(2n) {
+    margin-right: 0;
+  }
+  .client__item:not(:nth-last-child(-n+2)) {
+    margin-bottom: 30px;
+  }
 }
 @media screen and (min-width: 768px) {
   .client__item {
